remaking CustomLoader